syntax = "proto3";
option go_package=".;protocols";
package protocols;

message PingMsg {
    fixed64 VerificationKey = 1;
}

